--- a/src/app/pages/search/gymsearch/gymsearch.component.scss
+++ b/src/app/pages/search/gymsearch/gymsearch.component.scss
@@ -57,3 +57,12 @@ ion-searchbar {
     font-size: 28px;
     font-weight: 700;
 }
+
+ion-card-subtitle{
+    font-size: 20px;
+}
+
+.ratingIcon{
+    color: gold;
+    margin-bottom: -2px;
+}
