--- a/src/app/pages/messages/chatbox/chatbox.component.html
+++ b/src/app/pages/messages/chatbox/chatbox.component.html
@@ -3,7 +3,7 @@
 >
   <div class="message-content">
     <div class="messege-sender" *ngIf="showUser && profile">
-      ~ {{profile.displayName}}
+      ~ {{profile.displayName}}.
     </div>
     <div class="message-bubble">
       {{ message.text }}
