--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -52,34 +52,44 @@
         <br>
         <ion-card-subtitle class="whiteText" >Rating: {{ gym.rating ? gym.rating : 'No Rating' }}<ion-icon name="star" class="ratingIcon"></ion-icon></ion-card-subtitle>
       </ion-card-header>
-      <ion-card-content class="friend-container">
-        <ng-container *ngIf="gym.friendsLocationInfo && gym.friendsLocationInfo[0] && gym.friendsLocationInfo[0].length > 0; else noFriends">
-          <ion-card-header class="whiteText friendsHeader">
-            Friends that have workout sessions scheduled here:
-          </ion-card-header>
-          <ul class="no-bullet">
-            <li *ngFor="let friend of gym.friendsLocationInfo" (click)="viewProfile(friend.id)">
-              <div class="friend-details">
-              <img [src]="friend[0].profilePhoto" alt="Profile Photo" class="friend-photo"/>
-              <div>
-                <p class="friendDisplayName">{{ friend[0].friendDisplayName }}</p>
-                <ul>
-                  <li *ngFor="let gymSession of friend">
-                    <h1 class="workoutName">{{ gymSession.workoutName }}</h1>
-                    <p class="dateAndTime">{{ formatDate(gymSession.date) }}: {{ gymSession.startTime }}-{{ formatTime(gymSession.endTime) }}</p>
-                  </li>
-                </ul>
-              </div>
-              </div>
-            </li>
-          </ul>
-        </ng-container>
-        <ng-template #noFriends>
-          <ion-card-header class="whiteText friendsHeader">
-            No friends have workout sessions scheduled here
-          </ion-card-header>
-        </ng-template>
-      </ion-card-content>
+      
+      <!-- <ion-card-content *ngIf="showFriends" class="friend-container"> -->
+        <ion-card-content class="friend-container">
+          <ng-container *ngIf="gym.friendsLocationInfo && gym.friendsLocationInfo[0] && gym.friendsLocationInfo[0].length > 0; else noFriends">
+            <ion-card-content *ngIf="showFriends; else dontShowFriends" class="friend-container">
+            <ion-card-header class="whiteText friendsHeader">
+              Friends that have workout sessions scheduled here:
+            </ion-card-header>
+            <ul class="no-bullet">
+              <li *ngFor="let friend of gym.friendsLocationInfo" (click)="viewProfile(friend.id)">
+                <div class="friend-details">
+                <img [src]="friend[0].profilePhoto" alt="Profile Photo" class="friend-photo"/>
+                <div>
+                  <p class="friendDisplayName">{{ friend[0].friendDisplayName }}</p>
+                  <ul>
+                    <li *ngFor="let gymSession of friend">
+                      <h1 class="workoutName">{{ gymSession.workoutName }}</h1>
+                      <p class="dateAndTime">{{ formatDate(gymSession.date) }}: {{ gymSession.startTime }}-{{ formatTime(gymSession.endTime) }}</p>
+                    </li>
+                  </ul>
+                </div>
+                </div>
+              </li>
+            </ul>
+          </ion-card-content>
+          <ng-template #dontShowFriends>
+            <ion-card-header class="whiteText friendsHeader" (click)="toggleFriends()">
+              {{showFriends ? 'Hide' : 'Show'}} Friends
+            </ion-card-header>
+          </ng-template>
+          </ng-container>
+          <ng-template #noFriends>
+            <ion-card-header class="whiteText friendsHeader">
+              No friends have workout sessions scheduled here
+            </ion-card-header>
+          </ng-template>
+        </ion-card-content>
+      <!-- </ion-card-content> -->
     </ion-card>
   </ng-container>
 </ng-container>
