--- a/src/app/pages/search/gymsearch/gymsearch.component.scss
+++ b/src/app/pages/search/gymsearch/gymsearch.component.scss
@@ -15,6 +15,7 @@ ion-searchbar {
 .friend-container {
     background: #E63946;
     border-radius: 15px;
+    margin-bottom: 5%;
 }
 
 .gymDetails{
@@ -80,4 +81,22 @@ ion-card-subtitle{
 
 .dateAndTime{
     font-size: 15px;
+}
+
+.selectGym{
+    background: #1D3557;
+    border-radius: 15px;
+    color: white !important;
+    font-size: 28px;
+    font-weight: 700;
+    text-align: center;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.showFriendsOrNot{
+    background: #1D3557;
+    border-radius: 15px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 }
