--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -64,6 +64,9 @@
       <ion-card-content>
         <ion-button class="button"expand="block" routerLink="/points"><ion-icon name="star-outline" slot="start"></ion-icon>&nbsp;Points&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
+      <ion-card-content>
+        <ion-button class="button"expand="block" routerLink="/healthdata"><ion-icon name="heart-outline" slot="start"></ion-icon>&nbsp;Health Data&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+      </ion-card-content>
     </ion-card>
   </div>
 </ion-content>
