--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -65,7 +65,7 @@
         <ion-button class="button"expand="block" routerLink="/points"><ion-icon name="star-outline" slot="start"></ion-icon>&nbsp;Points&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
       <ion-card-content>
-        <ion-button class="button"expand="block" routerLink="/view-personalbests"><ion-icon name="star-outline" slot="start"></ion-icon>&nbsp;Personal Best&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+        <ion-button class="button"expand="block" routerLink="/view-personalbests"><ion-icon name="analytics-outline" slot="start"></ion-icon>&nbsp;Personal Best&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
     </ion-card>
   </div>
