--- a/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
+++ b/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
@@ -2,6 +2,12 @@
   <ion-card>
     <ion-row>
       <ion-col>
+          <ion-item>
+            <ion-label>Exercise</ion-label>
+          </ion-item>
+      </ion-col>
+
+      <ion-col>
         <ion-select [(ngModel)]="showExercise">
           <ion-select-option value="Bench Press">Bench Press</ion-select-option>
           <ion-select-option value="Squats">Squats</ion-select-option>
@@ -10,22 +16,27 @@
           <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
           <ion-select-option value="Push ups">Push ups</ion-select-option>
         </ion-select>
-      
-        <ion-radio-group [(ngModel)]="showReps">
-          <ion-item>
-            <ion-label>Reps</ion-label>
-            <ion-radio value="reps"></ion-radio>
-          </ion-item>
-          <ion-item>
-            <ion-label>Weight (kg)</ion-label>
-            <ion-radio value="weight"></ion-radio>
-          </ion-item>
-        </ion-radio-group>
       </ion-col>
+
+
     </ion-row>
-    <ion-row>
+
+      <ion-radio-group [(ngModel)]="showReps">
+        <ion-item>
+          <ion-label>Reps</ion-label>
+          <ion-radio value="reps"></ion-radio>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Weight (kg)</ion-label>
+          <ion-radio value="weight"></ion-radio>
+        </ion-item>
+
+      </ion-radio-group>
+
+
       <ion-button (click)="showChart()" expand="full">Show chart</ion-button>
-    </ion-row>
+
   </ion-card>
   
   
@@ -38,33 +49,30 @@
           [options]="chartOptions"
           [type]="chartType">
   </canvas>
-  
-  
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Latest {{showExercise}} bests</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-list>
-        <ion-item-sliding *ngFor="let personalBest of personalBestsData">
-          <ion-item>
-            <ion-label>
-              <h2>{{ personalBest.location }}</h2>
-              <p>{{ personalBest.date }}</p>
-            </ion-label>
-            <ion-note slot="end" color="primary">
-              <p>Reps: {{ personalBest.reps }}</p>
-              <p>Weight: {{ personalBest.weight }}</p>
-            </ion-note>
-          </ion-item>
-          <ion-item-options side="end">
-            <ion-item-option color="danger" expandable (click)="confirmDelete(personalBest)">
-              Delete
-            </ion-item-option>
-          </ion-item-options>
-        </ion-item-sliding>
-      </ion-list>
-      
-      
-    </ion-card-content>
-</ion-card>
+
+            <ion-card >
+              <ion-card-header>
+                <ion-card-title>Latest {{showExercise}} bests</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-list>
+                  <ion-item-sliding *ngFor="let personalBest of personalBestsData">
+                    <ion-item>
+                      <ion-label>
+                        <h2>{{ personalBest.location }}</h2>
+                        <p>{{ personalBest.date }}</p>
+                      </ion-label>
+                      <ion-note slot="end" color="primary">
+                        <p>Reps: {{ personalBest.reps }}</p>
+                        <p>Weight: {{ personalBest.weight }}</p>
+                      </ion-note>
+                    </ion-item>
+                    <ion-item-options side="end">
+                      <ion-item-option color="danger" expandable (click)="confirmDelete(personalBest)">
+                        Delete
+                      </ion-item-option>
+                    </ion-item-options>
+                  </ion-item-sliding>
+                </ion-list>
+              </ion-card-content>
+          </ion-card>
