changes to layout

--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -22,7 +22,7 @@
   <br><br>
   <ion-toolbar color="light">
     <ion-input [(ngModel)]="userMessage" placeholder="Enter your Question"></ion-input>
-    <ion-icon size="large" slot="end" name="send-outline" color="danger" (click)="sendUserMessage()"></ion-icon>
+    <ion-icon style="margin-right: 15px;" size="large" slot="end" name="send-outline" color="danger" (click)="sendUserMessage()"></ion-icon>
     <br><br>
   </ion-toolbar>
 </ion-footer>
