--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -27,6 +27,7 @@ ion-footer{
    margin-left: auto; // Push the message to the right
    max-width: 70%; // Limit the width to a percentage of the container
    align-self: flex-end; // A
+   white-space: pre-line;
     
    
    
