--- a/src/app/pages/view-personalbests/view-personalbests.page.html
+++ b/src/app/pages/view-personalbests/view-personalbests.page.html
@@ -14,7 +14,7 @@
 
 <!-- <ion-button *ngIf="!showForm" (click)="openPopup()">Add new best</ion-button> -->
 
-    <ion-fab slot="fixed" vertical="bottom" horizontal="centre">
+    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
       <ion-fab-button *ngIf="!showForm" (click)="openPopup()">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
