date and empty Submit bug fixed

--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -1,4 +1,4 @@
-l<ion-segment (ionChange)="onSegmentChange($event)" value="0" [scrollable]="true">
+<ion-segment (ionChange)="onSegmentChange($event)" value="0" [scrollable]="true">
     <ion-segment-button value="0">Active</ion-segment-button>
     <ion-segment-button value="1">Completed</ion-segment-button>
     <ion-segment-button value="2">Overdue</ion-segment-button>
