stops showing next page button when there is no next page token

--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -95,7 +95,7 @@
   </ng-container>
 </ng-container>
 
-<ion-item class="nextPage" (click)="nextPage()">
+<ion-item class="nextPage" *ngIf="nextPageToken" (click)="nextPage()">
   <!-- <div class="next-page-content"> -->
     Next Page: <ion-icon name="arrow-forward"></ion-icon> 
   <!-- </div> -->
