Health form is now retrievable and editable

--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="healthDataForm" (ngSubmit)="onSubmit()">
+  <ion-spinner *ngIf="isLoading"></ion-spinner>
+
+  <form [formGroup]="healthDataForm" *ngIf="!isLoading" (ngSubmit)="saveHealthData()">
     <ion-list>
       <ion-item>
         <ion-label>Height</ion-label>
